# felis-lang

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  frd.json
neco-bootstrap/: Cargo.toml
neco-bootstrap/ci-scripts/: check.sh  lint.sh
neco-bootstrap/docs/: compiler-architecture-improvements.md
neco-bootstrap/neco-felis-compile/: Cargo.toml
neco-bootstrap/neco-felis-compile/src/: arithmetic.rs  arrays.rs  compiler.rs  error.rs  lib.rs  ptx.rs  symbol_rewriter.rs  tests.rs  typing.rs
neco-bootstrap/neco-felis-compile/src/statement/: constructors.rs  expressions.rs  memory.rs  mod.rs  variables.rs
neco-bootstrap/neco-felis-elaboration/src/: lib.rs  phase_elaborated.rs  phase_renamed.rs
neco-bootstrap/neco-felis-ptx/: Cargo.toml
neco-bootstrap/neco-felis-ptx/src/: compiler.rs  identifier.rs  lib.rs  param_usage.rs
neco-bootstrap/neco-felis-rename/src/: lib.rs  phase_renamed.rs
neco-bootstrap/neco-felis-syn/docs/: how_to_implement.md
neco-bootstrap/neco-felis-syn/src/: lib.rs
neco-bootstrap/neco-felis-syn/src/items/: item.rs  item_array.rs  item_proc.rs  item_struct.rs  item_type.rs
neco-bootstrap/neco-felis-syn/src/parsing/: phase.rs  token.rs
neco-bootstrap/neco-felis-syn/src/position/: file.rs
neco-bootstrap/neco-felis-syn/src/proc_terms/: proc_term.rs  proc_term_apply.rs  proc_term_constructor_call.rs  proc_term_method_chain.rs  proc_term_struct_value.rs
neco-bootstrap/neco-felis-syn/src/statements/: statement.rs  statement_assign.rs  statement_call_ptx.rs  statement_method_chain.rs  statements_list.rs
neco-bootstrap/neco-felis-syn/src/terms/: term_match_branch.rs
neco-bootstrap/neco-felis-type-check/src/: lib.rs
neco-bootstrap/neco-felis-typing/src/: builtin.rs  context.rs  error.rs  lib.rs  types.rs  unify.rs
neco-bootstrap/neco-felis-typing/tests/: typing.rs
neco-bootstrap/neco-tempfile/: Cargo.toml
neco-rs/: Cargo.toml  README.md  rust-toolchain.toml
neco-rs/neco-rs/: Cargo.toml
neco-rs/neco-rs-elf/: Cargo.toml  README.md
neco-rs/neco-rs-elf/src/: lib.rs
neco-rs/neco-rs-json/: Cargo.toml
neco-rs/neco-rs-json/src/: lexer.rs  lib.rs  parser.rs  syntax.rs
neco-rs/neco-rs-json/tests/: error_display.rs  parse_error_cases.rs  parse_success_cases.rs
neco-rs/neco-rs-parser/: Cargo.toml
neco-rs/neco-rs-parser/src/: error.rs  lexer.rs  lib.rs  manifest.rs  parser.rs  root.rs  source.rs  syntax.rs
neco-rs/neco-rs-parser/src/lexer/: scan.rs  token.rs
neco-rs/neco-rs-parser/src/manifest/: model.rs  parse.rs  tests.rs
neco-rs/neco-rs-parser/src/syntax/: attribute.rs  item.rs  path.rs  pattern.rs  source_file.rs  term.rs
neco-rs/neco-rs-parser/tests/: parse_root.rs
neco-rs/neco-rs/src/: cli.rs  codegen.rs  effect.rs  ir.rs  lib.rs  linker.rs  lowering.rs  tests.rs
neco-rs/neco-rs/src/codegen/: layout.rs
neco-rs/neco-rs/src/effect/: io.rs
neco-rs/neco-rs/src/lowering/: declarations.rs  expr.rs  mod.rs  package.rs  ptx.rs  pure.rs  scalar.rs  symbol.rs  typecheck.rs
neco-rs/neco-rs/src/tests/: codegen_cli.rs  effects.rs  io_cuda_ptx.rs  lowering_values.rs  match_control.rs  validation.rs
neco-rs/neco-rs/tests/: runtime_fixtures.rs
neco-rs/neco-rs/tests/runtime_fixtures/: control_flow.rs  io.rs  neco_felis.rs  support.rs
stage0/: Cargo.toml
stage0/ci-scripts/: check.sh  generate-coverage-report.sh  lint.sh
stage0/neco/: Cargo.toml
stage0/neco-felis-compile/: Cargo.toml
stage0/neco-felis-compile-x86_64/: Cargo.toml
stage0/neco-felis-compile-x86_64/src/: arrays.rs  lib.rs  symbol_rewriter.rs  tests.rs
stage0/neco-felis-compile-x86_64/src/statement/: expressions.rs  memory.rs  mod.rs  utils.rs
stage0/neco-felis-compile/src/: arrays.rs  compiler.rs  typing.rs
stage0/neco-felis-elaboration/: Cargo.toml
stage0/neco-felis-elaboration/src/: lib.rs  phase_elaborated.rs
stage0/neco-felis-package/: Cargo.toml
stage0/neco-felis-package/docs/: how_to_implement.md
stage0/neco-felis-package/src/: lib.rs
stage0/neco-felis-resolve/: Cargo.toml
stage0/neco-felis-resolve/src/: lib.rs  phase_resolved.rs
stage0/neco-felis-syn/: Cargo.toml
stage0/neco-felis-syn/docs/: how_to_implement.md
stage0/neco-felis-syn/src/: lib.rs
stage0/neco-felis-syn/src/items/: item.rs  item_submodule.rs  item_use.rs
stage0/neco-felis-syn/src/parsing/: module_tree.rs  phase.rs
stage0/neco-felis-syn/src/proc_terms/: proc_term.rs  (+4 more)
stage0/neco-felis-syn/tests/: module_tree.rs  parse_submodule.rs
stage0/neco-felis-typing/: Cargo.toml
stage0/neco-felis-typing/src/: builtin.rs  context.rs  error.rs  lib.rs  types.rs  unify.rs
stage0/neco-felis-typing/tests/: typing.rs
stage0/neco-json/: Cargo.toml
stage0/neco-json/docs/: how_to_implement.md
stage0/neco-json/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs
stage0/neco-json/tests/: parse.rs
stage0/neco-tempfile/src/: lib.rs
stage0/neco-typing/: Cargo.toml  README.md
stage0/neco-typing/src/: check.rs  lib.rs  replace.rs
stage0/neco-typing/tests/: add_zero_zero_eq_zero.rs  check_type_def_final_sort_fail.rs  constructor_returns_other_type.rs  constructor_returns_sort.rs  undefined_in_constructor_ty.rs  undefined_in_forall_var_ty.rs  undefined_in_match_arm_rhs.rs  undefined_in_match_constructor.rs  undefined_in_match_target.rs  undefined_in_type_def_ty.rs  undefined_in_variable_ty.rs
stage0/neco/src/: lib.rs
(+490 files in other folders)
