[workspace]
members = [
    "neco-rs/neco-rs",
    "neco-rs/neco-rs-elf",
    "neco-rs/neco-rs-json",
    "neco-rs/neco-rs-parser",
]
resolver = "3"

[workspace.package]
rust-version = "1.94.0"

[workspace.dependencies]
neco-rs = { path = "./neco-rs/neco-rs" }
neco-rs-elf = { path = "./neco-rs/neco-rs-elf" }
neco-rs-json = { path = "./neco-rs/neco-rs-json" }
neco-rs-parser = { path = "./neco-rs/neco-rs-parser" }
