[workspace]
resolver = "2"
members = [
    "neco-felis-compile",
    "neco-felis-elaboration",
    "neco-felis-syn",
    "neco-scope",
]

[workspace.dependencies]
insta = "1.43.1"
tempfile = "3.20.0"

neco-felis-syn = { path = "./neco-felis-syn" }
neco-scope = { path = "./neco-scope" }
neco-felis-elaboration = { path = "./neco-felis-elaboration" }
