[workspace]
members = ["neco-rs", "neco-rs-elf", "neco-rs-json", "neco-rs-parser"]
resolver = "3"

[workspace.package]
rust-version = "1.94.0"

[workspace.dependencies]
neco-rs = { path = "./neco-rs" }
neco-rs-elf = { path = "./neco-rs-elf" }
neco-rs-json = { path = "./neco-rs-json" }
neco-rs-parser = { path = "./neco-rs-parser" }
