[workspace]
resolver = "2"
members = [
    "neco-felis-compile",
    "neco-felis-compile-x86_64",
    "neco-felis-resolve",
    "neco-felis-syn",
    "neco-felis-typing",
    "neco-scope",
    "neco-tempfile", "neco-typing",
]

[workspace.dependencies]
neco-tempfile = { path = "./neco-tempfile" }

neco-felis-syn = { path = "./neco-felis-syn" }
neco-scope = { path = "./neco-scope" }
neco-felis-resolve = { path = "./neco-felis-resolve" }
neco-felis-typing = { path = "./neco-felis-typing" }
